--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ openai
 soundfile
 elevenlabs
 pydub
--e ./unitree_webrtc_connect
+unitree_webrtc_connect @ git+https://github.com/pluralsh/unitree_webrtc_connect.git@master
+
