fix alive flag, more helm configs

--- a/charts/doggo/templates/deployment.yaml
+++ b/charts/doggo/templates/deployment.yaml
@@ -41,6 +41,13 @@ spec:
                 name: doggo-secrets
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - --voice={{ .Values.doggo.voice }}
+            {{ if .Values.doggo.alive }}
+            - --alive
+            {{ else }}
+            - --dead
+            {{ end }}
           # {{- with .Values.livenessProbe }}
           # livenessProbe:
           #   {{- toYaml . | nindent 12 }}
