--- a/charts/doggo/values.yaml
+++ b/charts/doggo/values.yaml
@@ -15,7 +15,7 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: ghcr.io/pluralsh/k9s-bot
+  repository: ghcr.io/pluralsh/k9s-doggo
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
