--- a/charts/doggo/values.yaml
+++ b/charts/doggo/values.yaml
@@ -19,7 +19,7 @@ image:
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "sha-2b7ee4a"
+  tag: "main"
 
 secrets:
   DUMMY_SECRET: "ignore"
