no hostpath volumes

--- a/charts/doggo/values.yaml
+++ b/charts/doggo/values.yaml
@@ -80,19 +80,14 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
-volumes:
-- name: hostpath-volume
-  hostPath:
-    path: /dev/bus/usb
+volumes: []
 # - name: foo
 #   secret:
 #     secretName: mysecret
 #     optional: false
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts:
-- name: hostpath-volume
-  mountPath: /dev/bus/usb
+volumeMounts: []
 # - name: foo
 #   mountPath: "/etc/foo"
 #   readOnly: true
