--- a/charts/doggo/templates/deployment.yaml
+++ b/charts/doggo/templates/deployment.yaml
@@ -6,6 +6,8 @@ metadata:
     {{- include "doggo.labels" . | nindent 4 }}
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       {{- include "doggo.selectorLabels" . | nindent 6 }}
