--- a/charts/doggo/templates/deployment.yaml
+++ b/charts/doggo/templates/deployment.yaml
@@ -8,6 +8,7 @@ spec:
   replicas: 1
   strategy:
     type: Recreate
+    rollingUpdate: null
   selector:
     matchLabels:
       {{- include "doggo.selectorLabels" . | nindent 6 }}
