add ability to configure inputs

--- a/charts/doggo/templates/statefulset.yaml
+++ b/charts/doggo/templates/statefulset.yaml
@@ -48,6 +48,9 @@ spec:
           {{ else }}
           - "--dead"
           {{ end }}
+          {{ if .Values.doggo.configureInput }}
+          - "--configure-input"
+          {{ end }}
           {{- with .Values.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
