--- a/charts/doggo/values.yaml
+++ b/charts/doggo/values.yaml
@@ -7,6 +7,9 @@ doggo:
   alive: true
   # The IP address of the robot
   robotIp: "192.168.1.100"
+  # Whether to configure the input device
+  configureInput: false
+
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
