--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ soundfile
 elevenlabs
 pydub
 click
+librosa
 unitree_webrtc_connect @ git+https://github.com/pluralsh/unitree_webrtc_connect.git@master
 
