add ability to specify output sample rates

--- a/charts/doggo/templates/statefulset.yaml
+++ b/charts/doggo/templates/statefulset.yaml
@@ -53,6 +53,9 @@ spec:
           {{ if .Values.doggo.configureInput }}
           - "--configure-input"
           {{ end }}
+          {{ if .Values.doggo.outputSampleRate }}
+          - "--output-sample-rate={{ .Values.doggo.outputSampleRate }}"
+          {{ end }}
           {{- with .Values.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
