--- a/charts/doggo/values.yaml
+++ b/charts/doggo/values.yaml
@@ -9,6 +9,8 @@ doggo:
   robotIp: "192.168.1.100"
   # Whether to configure the input device
   configureInput: false
+  # explicitly set the output sample rate for the speaker device
+  outputSampleRate: ~
 
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
