--- a/charts/doggo/templates/deployment.yaml
+++ b/charts/doggo/templates/deployment.yaml
@@ -1,13 +1,11 @@
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: {{ include "doggo.fullname" . }}
   labels:
     {{- include "doggo.labels" . | nindent 4 }}
 spec:
   replicas: 1
-  updateStrategy:
-    type: RollingUpdate
   selector:
     matchLabels:
       {{- include "doggo.selectorLabels" . | nindent 6 }}
