--- a/charts/doggo/values.yaml
+++ b/charts/doggo/values.yaml
@@ -12,6 +12,11 @@ doggo:
   # explicitly set the output sample rate for the speaker device
   outputSampleRate: ~
 
+  # explicitly set the input device for the microphone device
+  inputDevice: ~
+  # explicitly set the output device for the speaker device
+  outputDevice: ~
+
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
