add ask plural tool call

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ elevenlabs
 pydub
 click
 librosa
+httpx
 unitree_webrtc_connect @ git+https://github.com/pluralsh/unitree_webrtc_connect.git@master
 
